# openreelio

./: .coderabbit.yaml  .gitignore  .pr_agent.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.agents/external-agent-templates/: README.md  cursor-rules.md  deepseek-glm-notes.md  kimi-cli.mcp.json  (+2 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.husky/: pre-commit
crates/openreelio-cli/: Cargo.toml
crates/openreelio-cli/src/: main.rs  output.rs  validate.rs
crates/openreelio-cli/src/commands/: analysis.rs  asset.rs  caption.rs  command.rs  help_json.rs  mcp.rs  mod.rs  plan.rs  project.rs  render.rs  state.rs  text.rs  timeline.rs  transcription.rs
crates/openreelio-cli/tests/: integration.rs
crates/openreelio-core/: Cargo.toml
crates/openreelio-core/src/: events.rs  lib.rs
docs/: AGENT_IMPLEMENTATION_MASTER_PLAN.md  API_SPEC.md  ARCHITECTURE.md  ASSET_DISCOVERY.md  CAPTION_AGENT_FIX_PLAN.md  CODEX_AGENT_INTEGRATION_PLAN.md  CODE_SIGNING.md  COMMAND_REFERENCE.md  DATA_MODELS.md  DISTRIBUTION.md  GAP_ANALYSIS.md  MVP_IMPLEMENTATION_PLAN.md  PLUGIN_SPEC.md  PRO_EDITOR_IMPLEMENTATION_SEQUENCE.md  RENDER_CONTRACT_HARDENING_PLAN.md  ROADMAP.md  SECURITY_QA_REPORT.md  TECHNICAL_ASSESSMENT_CAPTIONS.md  TECHNICAL_ASSESSMENT_REPORT.md  TECHNICAL_ASSESSMENT_V07_FEATURES.md  WHISPER_GPU_ACCELERATION.md  WORK_PLAN.md
scripts/: check.mjs  codex-auth-exchange.mjs  generate-signing-keys.ts  prepare-bundled-ffmpeg.mjs  prepare-e2e-fixtures.mjs  run-stress-tests.ts  sync-version.test.ts  sync-version.ts  with-node-temp.mjs
src/: App.tsx  bindings.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: codex.rs  codex_app_server.rs  error.rs  external_agent.rs  mod.rs  process.rs  recovery.rs  terminal_command_line.rs  tests_destructive.rs  types.rs
src-tauri/src/core/ai/: agent_plan.rs  conversation.rs  conversation_commands.rs  cost_tracker.rs  edit_script.rs  executor.rs  gateway.rs  knowledge.rs  knowledge_commands.rs  memory.rs  mod.rs  plan_executor.rs  proposal.rs  provider.rs  streaming.rs
src-tauri/src/core/ai/providers/: anthropic.rs  gemini.rs  local.rs  mod.rs  openai.rs  openai_codex.rs
src-tauri/src/core/analysis/: audio.rs  cleanup.rs  clip_analysis.rs  clip_perception.rs  color_match.rs  diarization_import.rs  diarization_runner.rs  dtw.rs  ducking.rs  esd.rs  mod.rs  openai_perception.rs  segmentation.rs  semantic_edit_plan.rs  speaker_turns.rs  style_planner.rs  types.rs  visual.rs
src-tauri/src/core/annotations/: mod.rs  models.rs  orchestrator.rs  provider.rs  store.rs
src-tauri/src/core/annotations/providers/: google_cloud.rs  local.rs  mod.rs
src-tauri/src/core/assets/: license_policy.rs  metadata.rs  mod.rs  models.rs  thumbnail.rs
src-tauri/src/core/bins/: mod.rs
src-tauri/src/core/captions/: audio.rs  formats.rs  mapping.rs  mod.rs  models.rs  whisper.rs
src-tauri/src/core/commands/: asset.rs  bin.rs  caption.rs  clip.rs  effect.rs  executor.rs  filesystem.rs  insert_media.rs  marker.rs  mask.rs  mod.rs  project.rs  sequence.rs  text.rs  track.rs  traits.rs
src-tauri/src/core/credentials/: mod.rs
src-tauri/src/core/effects/: capabilities.rs  filter_builder.rs  gpu_filters.rs  mask_filters.rs  mod.rs  models.rs  presets.rs  qualifier_filters.rs
src-tauri/src/core/ffmpeg/: bundler.rs  commands.rs  detection.rs  mod.rs  runner.rs  state.rs
src-tauri/src/core/fs/: mod.rs
src-tauri/src/core/generative/: audio.rs  engine.rs  image.rs  mod.rs  providers.rs  video.rs  video_input_validation.rs
src-tauri/src/core/generative/provider_impls/: mod.rs  seedance.rs
src-tauri/src/core/indexing/: db.rs  mod.rs  report_chunks.rs  shots.rs  transcripts.rs
src-tauri/src/core/interchange/: edl.rs  mod.rs  models.rs  otio.rs  xml.rs
src-tauri/src/core/jobs/: mod.rs  payloads.rs  worker.rs
src-tauri/src/core/masks/: interpolation.rs  mod.rs
src-tauri/src/core/performance/: gpu.rs  memory.rs  metrics.rs  mod.rs  parallel.rs
src-tauri/src/core/plugin/: api.rs  context.rs  host.rs  manifest.rs  mod.rs  permission.rs
src-tauri/src/core/plugin/providers/: audio.rs  freesound.rs  meme.rs  mod.rs  stock.rs
src-tauri/src/core/project/: backup.rs  history.rs  mod.rs  ops_log.rs  snapshot.rs  state.rs
src-tauri/src/core/qc/: engine.rs  mod.rs  rules.rs  violation.rs
src-tauri/src/core/render/: cache.rs  executor.rs  export.rs  ffmpeg_graph.rs  ffmpeg_plan.rs  graph.rs  hardware.rs  hdr.rs  mod.rs  plan.rs  smart.rs
src-tauri/src/core/search/: mod.rs
src-tauri/src/core/search/meilisearch/: indexer.rs  mod.rs  service.rs  sidecar.rs
src-tauri/src/core/settings/: mod.rs
src-tauri/src/core/shapes/: mod.rs
src-tauri/src/core/template/: engine.rs  mod.rs  models.rs  motion_graphics.rs  sections.rs
src-tauri/src/core/text/: fonts.rs  mod.rs
src-tauri/src/core/timeline/: clock.rs  mod.rs  models.rs
src-tauri/src/core/tracking/: error.rs  mod.rs  models.rs  tracker.rs
src-tauri/src/core/update/: mod.rs
src-tauri/src/core/workspace/: ignore.rs  index.rs  mod.rs  path_resolver.rs  scanner.rs  service.rs  watcher.rs
src-tauri/src/ipc/: ai_command_defaults.rs  commands.rs  commands_legacy.rs  dto.rs  events.rs  mod.rs  payloads.rs  tests_destructive.rs
src-tauri/src/ipc/commands/: agent.rs  ai_legacy.rs  analysis.rs  annotations.rs  asset.rs  codex.rs  codex_app_server.rs  effect_presets.rs  external_agent.rs  helpers.rs  interchange.rs  jobs.rs  mod.rs  project.rs  render.rs  search.rs  settings.rs  source_monitor.rs  system.rs  terminal.rs  timeline.rs  transcript_editing.rs  transcription.rs  video_generation.rs  workspace.rs
src-tauri/tests/: analysis_pipeline_integration.rs  three_point_editing_integration.rs
(+1220 files in other folders)
