[package]
name = "openreelio"
version = "0.1.0"
description = "AI Agent-driven Prompt-based Video Editing IDE"
authors = ["OpenReelio Team"]
license = "MIT"
repository = "https://github.com/openreelio/openreelio"
edition = "2021"
# Note: transitive dependencies require Rust >= 1.85 (e.g. crates using Edition 2024).
rust-version = "1.85"

[lib]
name = "openreelio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openreelio"
path = "src/main.rs"
# The application binary doesn't contain unit tests, and enabling `cargo test`
# for the bin target can cause Windows-only manifest/resource conflicts.
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }
# FFmpeg bundler build dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
sha2 = "0.10"
zip = "2.2"
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
walkdir = "2"
thiserror = "2.0"

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6"
tauri-plugin-updater = "2.9"
tauri-plugin-stronghold = "2"

# Cryptography for credential storage and derivation
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2.0"

# ID generation
ulid = "1.1"
uuid = { version = "1.11", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
num_cpus = "1.16"
regex = "1"
dirs = "5.0"
fs2 = "0.4"
hostname = "0.4"

# Type export for TypeScript bindings (Code-as-Documentation)
specta = { version = "2.0.0-rc.20", features = ["derive", "serde_json"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async channels
async-trait = "0.1"

# Audio processing for transcription
hound = "3.5"

# Whisper transcription (optional - enabled via whisper feature)
whisper-rs = { version = "0.15", optional = true }

# Meilisearch client (optional - enabled via meilisearch feature)
meilisearch-sdk = { version = "0.27", optional = true }
futures = { version = "0.3", optional = true }

# WASM Plugin System
wasmtime = "27"
wasmtime-wasi = "27"

# FFmpeg bundler and AI providers (optional)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
sha2 = { version = "0.10", optional = true }
zip = { version = "2.2", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# ADR-033: Enable remote AI providers by default.
# Heavy local features (e.g. Whisper) stay opt-in to keep builds portable across platforms.
default = ["custom-protocol", "ai-providers"]
custom-protocol = ["tauri/custom-protocol"]
# Enable FFmpeg bundling (downloads FFmpeg during build)
bundled-ffmpeg = [
    "dep:reqwest",
    "dep:sha2",
    "dep:zip",
    "dep:flate2",
    "dep:tar",
    "dep:xz2",
    "dep:walkdir",
]
# Enable Whisper transcription support
whisper = ["dep:whisper-rs"]
# Enable Meilisearch full-text search
meilisearch = ["dep:meilisearch-sdk", "dep:futures", "dep:reqwest"]
# Enable AI providers (OpenAI, Anthropic, Ollama)
ai-providers = ["dep:reqwest"]
# Full AI bundle (for production builds with all features)
ai-full = ["whisper", "meilisearch", "ai-providers"]
# Development build with all features enabled (for contributors)
# Usage: cargo build --features dev-full
dev-full = ["ai-full", "bundled-ffmpeg"]
