[package]
name = "openreelio-cli"
version = "0.1.0"
description = "CLI for OpenReelio — headless AI agent-driven video editing"
authors = ["OpenReelio Team"]
license = "MIT"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "openreelio-cli"
path = "src/main.rs"

[dependencies]
openreelio-core = { path = "../openreelio-core" }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Output formatting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

[dev-dependencies]
tempfile = "3"
