[package]
name = "openreelio-cli"
version = "0.1.7"
description = "CLI for OpenReelio — headless AI agent-driven video editing"
authors = ["OpenReelio Team"]
license = "MIT"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "openreelio-cli"
path = "src/main.rs"

[dependencies]
openreelio-core = { path = "../openreelio-core" }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Output formatting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Error handling
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["whisper"]
whisper = ["openreelio-core/whisper"]
